<resources>
    <string name="app_name" translatable="false">HomeworkTBC</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="let_s_sign_in_to_your_account">Let’s Sign In to Your account</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email:</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your Password:</string>
    <string name="keep_me_signed_in">Keep me signed in</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="sign_in_here">sing in here</string>
    <string name="if_you_already_have_an_account">Don\t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_your_password2">Enter your Password:</string>
    <string name="repeat_password">Repeat password</string>
    <string name="enter_your_password3">Enter your Password:</string>
    <string name="enter_your_email2">Enter your Email:</string>
    <string name="emaill">Email</string>
    <string name="let_s_sign_you_up">Let\'s Sign you up</string>
    <string name="repeat_you_password">Repeat you Password:</string>
    <string name="password3">Password</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="info">Join industry leaders, innovators, and tech enthusiasts for three days of networking, learning, and inspiration. This year’s conference will cover the latest in AI, blockchain, cybersecurity, and the future of tech. Expect keynote speakers, hands-on workshops, and panel discussions from experts at top companies.</string>
    <string name="organizer">Organizer:</string>
    <string name="date">Date:</string>
    <string name="price">Price:</string>
    <string name="enter_you_email">Enter you Email:</string>
    <string name="log_out">Log out</string>
    <string name="save_changes" translatable="false">Save Changes</string>
    <string name="change_language" translatable="false">Change language</string>
    <string name="sabagvichiani027_gmail_com">sabagvichiani027@gmail.com</string>
    <string name="add_your_event">+ Add your event</string>
    <string name="get_your_ticket">Get Your Ticket</string>
    <string name="event_name">Event Name:</string>
    <string name="organizer_add">Organizer:</string>
    <string name="date_add">Date:</string>
    <string name="event_info">Event Info:</string>
    <string name="price_Add">Price:</string>
    <string name="image_url">Image URL:</string>
    <string name="add_event">Add Event</string>
    <string name="add_your_eventi">Add Your Event</string>
    <string name="attended_Events">Event tickets</string>
    <string name="added_events">My Events</string>
    <string name="error_while_fetching_data">Error while fetching data!</string>
    <string name="successfully_added">Successfully added</string>
    <string name="all_fields_are_required">All fields are required!</string>
    <string name="please_enter_a_valid_email_address">Please enter a valid email address!</string>
    <string name="password_must_be_at_least_8_characters">Password must be at least 8 characters!</string>
    <string name="login_failed">Login failed</string>
    <string name="passwords_do_not_match">Passwords do not match!</string>
    <string name="registration_failed">Registration failed</string>
    <string name="no_email_found">No email found</string>
    <string name="georgian">ქართული</string>
    <string name="English">English</string>
    <string name="language_changed_to">Language changed to %1$s</string>
</resources>