<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_details"
    tools:context=".presentation.detail.DetailFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:scaleType="centerCrop"
        android:src="@drawable/place_holder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/name"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="Tech Conference 2025"
        android:textColor="#AB811E"
        android:textSize="33sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/info"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:justificationMode="inter_word"
        android:text="@string/info"
        android:textColor="#AB811E "
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvOrganizator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/organizer"
        android:textColor="#AB811E "
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/organizer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="Tech Events Inc"
        android:textColor="#AB811E "
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tvOrganizator"
        app:layout_constraintTop_toTopOf="@id/tvOrganizator" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/date"
        android:textColor="#AB811E "
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvOrganizator" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="2025-01-22"
        android:textStyle="bold"
        android:textColor="#AB811E "
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@id/tvDate"
        app:layout_constraintTop_toTopOf="@id/tvDate" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvPrice"
        android:text="@string/price"
        android:textStyle="bold"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/tvDate"
        app:layout_constraintStart_toStartOf="@id/tvDate"
        android:layout_marginTop="20dp"
        android:textColor="#AB811E "
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tvPrice"
        app:layout_constraintTop_toTopOf="@id/tvPrice"
        android:id="@+id/price"
        android:textSize="22sp"
        android:text="333$"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:textColor="#AB811E "/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBuyTicket"
        android:layout_width="190dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_buy_ticket"
        android:text="Add to your store"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPrice" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="@id/btnBuyTicket"
        app:layout_constraintStart_toEndOf="@id/btnBuyTicket"
        android:src="@drawable/ticket"
        app:layout_constraintBottom_toBottomOf="@id/btnBuyTicket"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ticket"
        app:layout_constraintBottom_toBottomOf="@id/btnBuyTicket"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toStartOf="@id/btnBuyTicket"
        app:layout_constraintTop_toTopOf="@id/btnBuyTicket"
        android:layout_marginEnd="11dp"
        app:layout_goneMarginBottom="10dp"
        android:scaleX="-1"
        />







</androidx.constraintlayout.widget.ConstraintLayout>